<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Firefly III Mobile</string>
    <string name="required_field">Required Field</string>
    <string name="bill_due_today">Your bill is due today!</string>
    <string name="bill_due_future">Bill due on %1$s, %2$s</string>
    <string name="bill_due_past">Bill due %1$d days ago</string>
    <string name="next_bill">Next bill is %1$s, %2$s</string>
    <string name="bill_due_tomorrow">Bill due tomorrow</string>
    <string name="bill_due_yesterday">Bill due yesterday</string>
    <string name="error_loading_bills">Error loading bills</string>
    <string name="unable_ping_server">Unable to reach server</string>
    <string name="authorization_error">Authorization Error</string>
    <string name="timeout_connecting">Timeout connecting to server</string>
    <string name="syncing_account">Syncing your account…</string>
    <string name="no_bills">Hurray! You have no bills</string>
    <string name="bill_amount">-%1$s %2$s</string>
    <string name="no_browser_installed">No application can handle this request. Please install a web browser</string>
    <string name="target_date">Target Date: %1$s</string>
    <string name="no_target_date">No date set</string>
    <string name="min_amount_save_per_month">Minimum amount to save per month: %1$s %2$s</string>
    <string name="user_did_it">You did it!</string>
    <string name="edit">Edit</string>
    <string name="due_today">Due today</string>
    <string name="one_more_day_to_target">1 more day to your target!</string>
    <string name="target_missed">Missed by %1$d days</string>
    <string name="yesterday_target">Oh no! Your target was yesterday</string>
    <string name="days_to_go">%1$d days to go</string>
    <string name="get_confirmation">Are you sure?</string>
    <string name="piggy_bank_deleted">Success! Deleted piggy bank %1$s</string>
    <string name="bill_deleted">Success! Deleted bill %1$s</string>
    <string name="generic_delete_error">An error occurred while deleting</string>
    <string name="overview">Overview</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="welcome">Welcome!</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authentication_failed_message">There was an issue retrieving access token from your Firefly III instance. Ensure you are using %1$s as your redirect URI in your Firefly III config.</string>
    <string name="details">Details</string>
    <string name="view_report">View Report (%1$s)</string>
    <string name="data_added_when_user_online">%1$s will be added when you are back online</string>
    <string name="no_piggy_bank">No Piggy Bank found</string>
    <string name="no_transaction_found">No %1$s found</string>
    <string name="no_account_found">No %1$s found</string>
    <string-array name="repeat_frequency">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Half-yearly</item>
        <item>Yearly</item>
    </string-array>
    <string name="transaction_deleted">Transaction deleted</string>
    <string name="issue_deleting">There was an issue deleting your %1$s. Please try again later</string>
    <string name="transaction_updated">Transaction Updated</string>
    <string name="transaction_added">Transaction Added</string>
    <string name="issue_refreshing_token">There was an issue refreshing your token</string>
    <string name="refreshing_token">Refreshing your access token…</string>
    <string name="description">Description</string>
    <string name="currency">Currency</string>
    <string name="source_account">Source Account</string>
    <string name="amount">Amount</string>
    <string name="destination_account">Destination Account</string>
    <string name="bill_name_optional">Bill Name(Optional)</string>
    <string name="piggy_bank_name_optional">Piggy Bank Name(Optional)</string>
    <string name="category_optional">Category(Optional)</string>
    <string name="tags_optional">Tags(optional), Comma separated</string>
    <string name="url">URL</string>
    <string name="client_id">Client ID</string>
    <string name="client_secret">Client Secret</string>
    <string name="sign_in">Sign In</string>
    <string name="server_version">Server Version</string>
    <string name="mobile_version">Mobile Version</string>
    <string name="api_version">API Version</string>
    <string name="operating_system">Operating System</string>
    <string name="author">Author</string>
    <string name="view_on_github">View on Github</string>
    <string name="about">About</string>
    <string name="decimal_places">Decimal Places</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="currency_code">Currency Code</string>
    <string name="tags">Tags</string>
    <string name="bill">Bill</string>
    <string name="piggy_bank">Piggy Bank</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="deposit">Deposit</string>
    <string name="transfer">Transfer</string>
    <string name="min_amount">Min Amount</string>
    <string name="max_amount">Max Amount</string>
    <string name="skip">Skip</string>
    <string name="delete_piggy_bank_message">Are you sure you want to delete the piggy bank named %1$s ?</string>
    <string name="delete_bill_message">Are you sure you want to delete the bill named %1$s ?</string>
    <string name="delete_transaction_message">Are you sure you want to delete the transaction described %1$s ?</string>
    <string name="options">Options</string>
    <string name="transaction">Transactions</string>
    <string name="account">Accounts</string>
    <string name="asset_account">Asset Accounts</string>
    <string name="expense_account">Expense Accounts</string>
    <string name="revenue_account">Revenue Accounts</string>
    <string name="liability_account">Liability Accounts</string>
    <string name="money_management">Money Management</string>
    <string name="dashboard">Dashboard</string>
    <string name="revenue_income_menu">Revenue / Income</string>
    <string-array name="account_type">
        <item>Asset</item>
        <item>Expense</item>
        <item>Revenue</item>
        <item>Liability</item>
    </string-array>
    <string-array name="account_role">
        <item>Default Asset</item>
        <item>Shared Asset</item>
        <item>Saving Asset</item>
        <item>Credit Card Asset</item>
    </string-array>
    <string-array name="interest_freq">
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="liability">
        <item>Loan</item>
        <item>Debt</item>
        <item>Mortgage</item>
        <item>Credit Card</item>
    </string-array>
    <string name="personal_access_token">Personal Access Token</string>
    <string name="delete_tag_message">Are you sure you want to delete the tag named %1$s ?</string>
    <string name="delete_account_title">Delete account %1$s</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="delete_transaction_title">Delete transaction with description %1$s</string>
    <string name="delete_tag_title">Delete Tag %1$s</string>
    <string name="delete_piggy_bank_title">Delete piggy bank %1$s</string>
    <string name="delete_bill_title">Delete Bill %1$s</string>
    <string name="delete_account_message">Are you sure you want to delete the account named %1$s</string>
    <string name="tag_deleted">Success! Deleted tag %1$s</string>
</resources>
