<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c)  2018 - 2021 Daniel Quah
  ~ Copyright (c)  2021 ASDF Dev Pte. Ltd.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firefly_url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:textSize="16sp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/firefly_id_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firefly_url_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:drawablePadding="4dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firefly_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_id"
        android:textSize="16sp"
        android:layout_marginBottom="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/firefly_secret_layout"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firefly_id_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:drawablePadding="4dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firefly_secret_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_secret"
        android:textSize="16sp"
        android:layout_marginBottom="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/self_signed_checkbox"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firefly_secret_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:drawablePadding="4dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/self_signed_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/firefly_secret_layout"
        app:layout_constraintStart_toStartOf="@+id/firefly_secret_layout" />

    <TextView
        android:id="@+id/self_signed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I am using a self signed cert"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/self_signed_checkbox"
        app:layout_constraintBottom_toBottomOf="@+id/self_signed_checkbox"
        app:layout_constraintStart_toEndOf="@+id/self_signed_checkbox"/>

    <TextView
        android:id="@+id/cert_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/self_signed_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/self_signed_checkbox" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/firefly_submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/sign_in"
        android:layout_marginTop="15dp"
        android:textColor="@color/md_white_1000"
        android:background="@color/md_black_1000"
        app:layout_constraintEnd_toEndOf="@+id/firefly_secret_layout"
        app:layout_constraintStart_toStartOf="@+id/firefly_secret_layout"
        app:layout_constraintTop_toBottomOf="@+id/cert_path"/>

</androidx.constraintlayout.widget.ConstraintLayout>
