<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/dialog_add_transaction_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transactionConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_amount_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_amount_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="12dp"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:digits="0123456789.,"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currency_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/transaction_amount_layout"
                app:layout_constraintStart_toStartOf="@+id/transaction_amount_layout"
                app:layout_constraintTop_toBottomOf="@+id/transaction_amount_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currency_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/currency"
                    android:drawablePadding="12dp"
                    android:focusable="false"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/transaction_date_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/currency_layout"
                app:layout_constraintStart_toStartOf="@+id/currency_layout"
                app:layout_constraintTop_toBottomOf="@+id/currency_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_date_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="12dp"
                    android:focusable="false"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/source_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/transaction_date_layout"
                app:layout_constraintStart_toStartOf="@+id/transaction_date_layout"
                app:layout_constraintTop_toBottomOf="@+id/transaction_date_layout">

                <xyz.hisname.fireflyiii.ui.base.TextInputAutoCompleteTextView
                    android:id="@+id/source_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:hint="@string/source_account"
                    android:textSize="16sp"
                    style="@style/Base.V7.Widget.AppCompat.AutoCompleteTextView" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/source_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/source_account"
                app:layout_constraintEnd_toEndOf="@+id/transaction_amount_layout"
                app:layout_constraintStart_toStartOf="@+id/transaction_amount_layout"
                app:layout_constraintTop_toBottomOf="@+id/source_layout"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/source_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/transaction_amount_layout"
                app:layout_constraintStart_toStartOf="@+id/transaction_amount_layout"
                app:layout_constraintTop_toBottomOf="@+id/source_textview"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/destination_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/transaction_amount_layout"
                app:layout_constraintStart_toStartOf="@+id/transaction_amount_layout"
                app:layout_constraintTop_toBottomOf="@+id/source_spinner">

                <xyz.hisname.fireflyiii.ui.base.TextInputAutoCompleteTextView
                    android:id="@+id/destination_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:hint="@string/destination_account"
                    android:textSize="16sp"
                    style="@style/Base.V7.Widget.AppCompat.AutoCompleteTextView" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/destination_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/destination_account"
                app:layout_constraintEnd_toEndOf="@+id/transaction_amount_layout"
                app:layout_constraintStart_toStartOf="@+id/transaction_amount_layout"
                app:layout_constraintTop_toBottomOf="@+id/destination_layout"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/destination_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/transaction_amount_layout"
                app:layout_constraintStart_toStartOf="@+id/transaction_amount_layout"
                app:layout_constraintTop_toBottomOf="@+id/destination_textview"/>

        <com.github.florent37.expansionpanel.ExpansionHeader
            android:id="@+id/expansionHeader"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="52dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:expansion_headerIndicator="@id/headerIndicator"
            app:expansion_layout="@id/expansionLayout"
            app:expansion_toggleOnClick="true"
            app:layout_constraintTop_toBottomOf="@+id/destination_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/optional_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/optionalField"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/optional_field"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/headerIndicator"
                android:adjustViewBounds="true"
                android:layout_gravity="center_vertical|end"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

        </com.github.florent37.expansionpanel.ExpansionHeader>

        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/expansionLayout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:expansion_expanded="false"
            app:layout_constraintTop_toBottomOf="@+id/expansionHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/optionalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bill_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <xyz.hisname.fireflyiii.ui.base.TextInputAutoCompleteTextView
                    android:id="@+id/bill_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="12dp"
                    android:hint="@string/bill"
                    android:textSize="16sp"
                    style="@style/Base.V7.Widget.AppCompat.AutoCompleteTextView" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/piggy_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bill_layout">

                <xyz.hisname.fireflyiii.ui.base.TextInputAutoCompleteTextView
                    android:id="@+id/piggy_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="12dp"
                    android:hint="@string/piggy_bank"
                    android:textSize="16sp"
                    android:focusable="false"
                    style="@style/Base.V7.Widget.AppCompat.AutoCompleteTextView" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/piggy_layout">

                <xyz.hisname.fireflyiii.ui.base.TextInputAutoCompleteTextView
                    android:id="@+id/category_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="12dp"
                    android:hint="@string/categories"
                    android:focusable="false"
                    android:textSize="16sp"
                    style="@style/Base.V7.Widget.AppCompat.AutoCompleteTextView" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tags_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_layout">

                <com.hootsuite.nachos.NachoTextView
                    android:id="@+id/tags_chip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/tags"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </com.github.florent37.expansionpanel.ExpansionLayout>

        <Button
            android:id="@+id/add_transaction_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:background="@color/md_black_1000"
            app:layout_constraintTop_toBottomOf="@+id/expansionLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/placeHolderView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/add_transaction_button"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
